docs/versions/4.22/groups/index.md
---
layout: default
title: OCP 4.22 Remediation Groups
version: "4.22"
---

# OCP 4.22 Remediation Groups

[← Back to OCP 4.22 Compliance Status](../4.22.html) | [View Summary](../remediations.html)

Each group below represents a logical set of related compliance checks that can be remediated together in a single MachineConfig or CRD.

<div class="filter-bar">
  <div class="filter-search">
    <input type="text" id="table-search" placeholder="Search groups..." onkeyup="filterTables()">
  </div>
  <div class="filter-buttons">
    <button class="filter-btn active" data-filter="all" onclick="setStatusFilter('all')">All</button>
    <button class="filter-btn" data-filter="pending" onclick="setStatusFilter('pending')">🟡 Pending</button>
    <button class="filter-btn" data-filter="in_progress" onclick="setStatusFilter('in_progress')">🔵 In Progress</button>
    <button class="filter-btn" data-filter="on_hold" onclick="setStatusFilter('on_hold')">⚪ On Hold</button>
    <button class="filter-btn" data-filter="complete" onclick="setStatusFilter('complete')">🟢 Complete</button>
  </div>
  <div class="filter-buttons">
    <button class="filter-btn upstream-filter active" data-upstream="all" onclick="setUpstreamFilter('all')">All Upstream</button>
    <button class="filter-btn upstream-filter" data-upstream="upstream-candidate" onclick="setUpstreamFilter('upstream-candidate')">🔼 Candidate</button>
    <button class="filter-btn upstream-filter" data-upstream="ran-only" onclick="setUpstreamFilter('ran-only')">🎯 RAN Only</button>
    <button class="filter-btn upstream-filter" data-upstream="platform-config" onclick="setUpstreamFilter('platform-config')">⚙️ Platform</button>
    <button class="filter-btn upstream-filter" data-upstream="pass-vanilla" onclick="setUpstreamFilter('pass-vanilla')">✅ Pass</button>
    <button class="filter-btn upstream-filter" data-upstream="not-applicable" onclick="setUpstreamFilter('not-applicable')">— N/A</button>
    <button class="filter-btn upstream-filter" data-upstream="has-branch" onclick="setUpstreamFilter('has-branch')">🔧 Branch Prepared</button>
  </div>
  <div class="filter-counts" id="filter-counts"></div>
</div>

---

## HIGH Severity

| Group | Title | Priority | Status | Tested | Jira | PR |
|-------|-------|----------|--------|--------|------|-----|
| [H1](H1.html) | Crypto Policy | <span class="priority-score p1">P1</span> | 🔵 In Progress | PASS | [CNF-21212](https://issues.redhat.com/browse/CNF-21212) | [#735](https://github.com/openshift-kni/telco-reference/pull/735) |
| [H2](H2.html) | PAM Empty Passwords | <span class="priority-score p1">P1</span> | 🔵 In Progress | PASS | [CNF-21212](https://issues.redhat.com/browse/CNF-21212) | [#736](https://github.com/openshift-kni/telco-reference/pull/736) |
| [H3](H3.html) | SSHD Empty Passwords | <span class="priority-score p1">P1</span> | 🟢 Complete | PASS | [CNF-21326](https://issues.redhat.com/browse/CNF-21326) | - |

---

## MEDIUM Severity

| Group | Title | Priority | Status | Tested | Compare | Jira | PR |
|-------|-------|----------|--------|--------|---------|------|-----|
| [M1](M1.html) | SSHD Configuration | <span class="priority-score p2">P2</span> | 🔵 In Progress | PARTIAL | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m1-sshd-medium) | [CNF-22620](https://issues.redhat.com/browse/CNF-22620) | - |
| [M4](M4.html) | Audit Rules - SELinux | <span class="priority-score p2">P2</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m4-audit-selinux) | [CNF-22621](https://issues.redhat.com/browse/CNF-22621) | - |
| [M6](M6.html) | Audit Rules - Time Modifications | <span class="priority-score p2">P2</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m6-audit-time) | [CNF-22622](https://issues.redhat.com/browse/CNF-22622) | - |
| [M7](M7.html) | Audit Rules - Login Monitoring | <span class="priority-score p2">P2</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m7-audit-login) | [CNF-22623](https://issues.redhat.com/browse/CNF-22623) | - |
| [M10](M10.html) | API Server Encryption | <span class="priority-score p2">P2</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m10-api-encryption) | [CNF-22624](https://issues.redhat.com/browse/CNF-22624) | [#678](https://github.com/openshift-kni/telco-reference/pull/678) |
| [M2](M2.html) | Kernel Hardening (Sysctl) | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m2-kernel-sysctl) | [CNF-21196](https://issues.redhat.com/browse/CNF-21196) | [#737](https://github.com/openshift-kni/telco-reference/pull/737) |
| [M3](M3.html) | Audit Rules - DAC Modifications | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m3-audit-dac) | [CNF-23513](https://issues.redhat.com/browse/CNF-23513) | - |
| [M5](M5.html) | Audit Rules - Kernel Modules | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m5-audit-modules) | [CNF-23448](https://issues.redhat.com/browse/CNF-23448) | [#738](https://github.com/openshift-kni/telco-reference/pull/738) |
| [M8](M8.html) | Audit Rules - Network Config | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m8-audit-network) | [CNF-23449](https://issues.redhat.com/browse/CNF-23449) | - |
| [M9](M9.html) | Auditd Configuration | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m9-auditd-config) | [CNF-23514](https://issues.redhat.com/browse/CNF-23514) | - |
| [M11](M11.html) | Ingress TLS Ciphers | <span class="priority-score p3">P3</span> | 🟢 Complete | PASS | - | [CNF-23451](https://issues.redhat.com/browse/CNF-23451) | - |
| [M12](M12.html) | Audit Profile | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m12-audit-profile) | [CNF-23452](https://issues.redhat.com/browse/CNF-23452) | - |
| [M13](M13.html) | Extended DAC Audit | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m13-audit-dac-ext) | [CNF-23515](https://issues.redhat.com/browse/CNF-23515) | - |
| [M14](M14.html) | Identity File Access Audit | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m14-audit-identity) | [CNF-23516](https://issues.redhat.com/browse/CNF-23516) | - |
| [M15](M15.html) | File Deletion Audit | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m15-audit-file-deletion) | [CNF-23517](https://issues.redhat.com/browse/CNF-23517) | - |
| [M16](M16.html) | Unsuccessful File Modification Audit | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m16-audit-unsuccessful) | [CNF-23518](https://issues.redhat.com/browse/CNF-23518) | - |
| [M17](M17.html) | Privileged Commands Audit | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m17-audit-privileged) | [CNF-23519](https://issues.redhat.com/browse/CNF-23519) | - |
| [M18](M18.html) | Session & MAC Audit | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m18-audit-session-mac) | [CNF-23520](https://issues.redhat.com/browse/CNF-23520) | - |
| [M19](M19.html) | Usergroup Modification Audit | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m19-audit-usergroup) | [CNF-23521](https://issues.redhat.com/browse/CNF-23521) | - |
| [M20](M20.html) | Auditd Data Retention | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m20-auditd-retention) | [CNF-23522](https://issues.redhat.com/browse/CNF-23522) | - |
| [M21](M21.html) | Kernel Module Blacklist | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m21-kernel-modules) | [CNF-23523](https://issues.redhat.com/browse/CNF-23523) | - |
| [M22](M22.html) | Network Sysctl Hardening | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m22-net-sysctl) | [CNF-23524](https://issues.redhat.com/browse/CNF-23524) | - |
| [M23](M23.html) | Kernel Sysctl Extended | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m23-kernel-sysctl-ext) | [CNF-23525](https://issues.redhat.com/browse/CNF-23525) | - |
| [M24](M24.html) | CoreOS Kernel Arguments | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m24-coreos-kernel-args) | [CNF-23526](https://issues.redhat.com/browse/CNF-23526) | - |
| [M25](M25.html) | Chrony/NTP Configuration | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m25-chrony) | [CNF-23527](https://issues.redhat.com/browse/CNF-23527) | - |
| [M26](M26.html) | Systemd Hardening | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m26-systemd) | [CNF-23528](https://issues.redhat.com/browse/CNF-23528) | - |
| [M27](M27.html) | SSHD Moderate Extensions | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m27-sshd-moderate) | [CNF-23529](https://issues.redhat.com/browse/CNF-23529) | - |
| [M28](M28.html) | USBGuard | <span class="priority-score p3">P3</span> | ⚪ On Hold | WARN | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m28-usbguard) | - | - |
| [M29](M29.html) | System Access Controls | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m29-access-controls) | [CNF-23453](https://issues.redhat.com/browse/CNF-23453) | - |
| [M30](M30.html) | OAuth Configuration | <span class="priority-score p3">P3</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/m30-oauth) | [CNF-23454](https://issues.redhat.com/browse/CNF-23454) | - |

---

## LOW Severity

| Group | Title | Priority | Status | Tested | Compare | Jira | PR |
|-------|-------|----------|--------|--------|---------|------|-----|
| [L1](L1.html) | SSHD LogLevel | <span class="priority-score p4">P4</span> | 🟢 Complete | PASS | - | - | - |
| [L2](L2.html) | Sysctl dmesg_restrict | <span class="priority-score p4">P4</span> | 🔵 In Progress | PASS | [📦](https://github.com/openshift-kni/telco-reference/compare/main...sebrandon1:telco-reference:compliance/4.22/l2-sysctl-dmesg) | [CNF-23450](https://issues.redhat.com/browse/CNF-23450) | - |

---

## Manual Checks (No Auto-Remediation)

These checks require manual operator review — no MachineConfig or CRD can fix them automatically.

| Group | Title | Checks | Priority | Status |
|-------|-------|--------|----------|--------|
| [MAN1](MAN1.html) | Workload Security | 15 | <span class="priority-score p3">P3</span> | 🟡 Pending |
| [MAN2](MAN2.html) | RBAC & Access Control | 5 | <span class="priority-score p2">P2</span> | 🟡 Pending |
| [MAN3](MAN3.html) | Secrets Management | 2 | <span class="priority-score p3">P3</span> | 🟡 Pending |
| [MAN4](MAN4.html) | Audit Log Partitions | 4 | <span class="priority-score p4">P4</span> | 🟡 Pending |
| [MAN5](MAN5.html) | Hardware/BIOS & Alerting | 5 | <span class="priority-score p4">P4</span> | 🟡 Pending |

---

## Group Naming Convention

- **H** = HIGH severity (H1, H2, H3)
- **M** = MEDIUM severity (M1-M30)
- **L** = LOW severity (L1, L2)
- **MAN** = Manual checks (MAN1-MAN5)

## Priority Legend

| Priority | Label | Criteria |
|----------|-------|----------|
| <span class="priority-score p1">P1</span> | Critical | HIGH severity - security critical |
| <span class="priority-score p2">P2</span> | High | MEDIUM severity with high impact (5+ checks) or API/encryption |
| <span class="priority-score p3">P3</span> | Medium | MEDIUM severity with standard impact |
| <span class="priority-score p4">P4</span> | Low | LOW severity - best practices |
| <span class="priority-score p5">P5</span> | Deferred | On hold or blocked |

## Status Legend

| Status | Meaning |
|--------|---------|
| 🔵 In Progress | Active PR open for remediation |
| 🟡 Pending | Not yet started |
| ⚪ On Hold | Paused |
| 🟢 Complete | Merged and verified |

---

## Linking to Groups from PRs

Use these URLs in your PR descriptions:

<div class="copy-box">
  <code id="url-h1">https://sebrandon1.github.io/compliance-scripts/versions/4.22/groups/H1.html</code>
  <button class="copy-btn" onclick="copyToClipboard('url-h1')" title="Copy to clipboard">📋</button>
</div>
<div class="copy-box">
  <code id="url-m1">https://sebrandon1.github.io/compliance-scripts/versions/4.22/groups/M1.html</code>
  <button class="copy-btn" onclick="copyToClipboard('url-m1')" title="Copy to clipboard">📋</button>
</div>

Example markdown for PR descriptions:
<div class="copy-box">
  <code id="example-md">This PR implements [H1: Crypto Policy](https://sebrandon1.github.io/compliance-scripts/versions/4.22/groups/H1.html) and [H2: PAM Empty Passwords](https://sebrandon1.github.io/compliance-scripts/versions/4.22/groups/H2.html).</code>
  <button class="copy-btn" onclick="copyToClipboard('example-md')" title="Copy to clipboard">📋</button>
</div>

<script>
var currentFilter = 'all';
var currentUpstream = 'all';
var searchTerm = '';

{% include resolve-tracking.html %}
{% assign groups = tracking.groups %}
var upstreamVerdicts = {
{% for group in groups %}  "{{ group[0] }}": "{{ group[1].upstream_verdict }}"{% unless forloop.last %},
{% endunless %}{% endfor %}
};
var hasBranch = {
{% for group in groups %}{% assign has_url = false %}{% if group[1].upstream %}{% for u in group[1].upstream %}{% if u.compare_url %}{% assign has_url = true %}{% endif %}{% endfor %}{% endif %}{% if has_url %}  "{{ group[0] }}": true,
{% endif %}{% endfor %}
};

function setStatusFilter(filter) {
  currentFilter = filter;
  document.querySelectorAll('.filter-btn:not(.upstream-filter)').forEach(btn => btn.classList.remove('active'));
  document.querySelector('[data-filter="' + filter + '"]').classList.add('active');
  filterTables();
}

function setUpstreamFilter(upstream) {
  currentUpstream = upstream;
  document.querySelectorAll('.upstream-filter').forEach(btn => btn.classList.remove('active'));
  document.querySelector('[data-upstream="' + upstream + '"]').classList.add('active');
  filterTables();
}

function getGroupId(row) {
  var link = row.querySelector('a[href]');
  if (link) {
    var match = link.getAttribute('href').match(/([A-Z]+\d+)\.html/);
    if (match) return match[1];
  }
  return null;
}

function filterTables() {
  searchTerm = document.getElementById('table-search').value.toLowerCase();
  var tables = document.querySelectorAll('table');
  var visibleCount = 0;
  var totalCount = 0;

  tables.forEach(function(table) {
    var rows = table.querySelectorAll('tbody tr, tr:not(:first-child)');
    rows.forEach(function(row) {
      if (row.querySelector('th')) return;
      totalCount++;
      var text = row.textContent.toLowerCase();
      var statusCell = row.cells[2] ? row.cells[2].textContent : '';
      var groupId = getGroupId(row);
      var verdict = groupId ? (upstreamVerdicts[groupId] || '') : '';

      var matchesSearch = searchTerm === '' || text.includes(searchTerm);
      var matchesFilter = currentFilter === 'all' ||
        (currentFilter === 'pending' && statusCell.includes('Pending')) ||
        (currentFilter === 'in_progress' && statusCell.includes('In Progress')) ||
        (currentFilter === 'on_hold' && statusCell.includes('On Hold')) ||
        (currentFilter === 'complete' && statusCell.includes('Complete'));
      var matchesUpstream = currentUpstream === 'all' || verdict === currentUpstream ||
        (currentUpstream === 'has-branch' && groupId && hasBranch[groupId]);

      if (matchesSearch && matchesFilter && matchesUpstream) {
        row.style.display = '';
        visibleCount++;
      } else {
        row.style.display = 'none';
      }
    });
  });

  document.getElementById('filter-counts').textContent =
    visibleCount === totalCount ? '' : 'Showing ' + visibleCount + ' of ' + totalCount;
}

function copyToClipboard(elementId) {
  var text = document.getElementById(elementId).textContent;
  navigator.clipboard.writeText(text).then(function() {
    var btn = event.target;
    var original = btn.textContent;
    btn.textContent = '✓';
    btn.classList.add('copied');
    setTimeout(function() {
      btn.textContent = original;
      btn.classList.remove('copied');
    }, 1500);
  });
}
</script>
